--- a/Todo_php/work/public/css/styles.css
+++ b/Todo_php/work/public/css/styles.css
@@ -56,7 +56,8 @@ input[type="checkbox"]{
   padding-left: 8px;
 }
 
-.logout{
-  color:rgb(210, 208, 208);
-  text-align: right;
+div{
+  color:rgb(255, 255, 255);
+  position: absolute;
+top: 40px; right: 40px;
 }
