--- a/login_main/style.css
+++ b/login_main/style.css
@@ -1,23 +1,26 @@
 @charset "UTF-8";
+h1{
+    font-size: 16px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
+}
+
 body{
 	font-size:16px;
 	font-family: Verdana, sans-serif;
 }
 
-#container{
-	width: 280px;
-	margin: 30px auto;
-}
-
 form{
-    text-align:center;
+    width: 280px;
+    margin: 30px auto;
+    text-align: center;
 }
 
-
-input[type=password],
-input[type=text]{
+input[type=text],
+input[type=password]{
     padding: 5px;
     border-radius: 4px;
+    border-width: medium;
     font-size: 14px;
 }
 
