--- a/login_main/login/style.css
+++ b/login_main/login/style.css
@@ -1,24 +1,34 @@
 @charset "UTF-8";
-form{
-    width: 280px;
-    margin: 30px auto;
-    text-align: center;
+.wrapper{
+    margin: 16px auto;
+	text-align: center;
+	display: block;
 }
 
-input[type=text]{
+.wrapper a {
+    color:rgb(6, 139, 241);
+    text-decoration: none;
+}
+
+.wrapper input[type=text],
+.wrapperinput[type=password]{
     padding: 5px;
     border-radius: 4px;
     border-width: medium;
     font-size: 14px;
 }
 
-input[type=submit]{
+.wrapper input[type=submit]{
     width: 100px;
     padding: 7px;
     border-radius: 5px;
     color: #fff;
     background: #00aaff;
     box-shadow: 0 3px 0 #0088cc;
-    cursor: pointer; 
+    cursor: pointer;
     margin: 0 auto 15px;
+}
+
+.wrapper input[type=submit]:hover{
+    opacity: 0.8;
 }
